# norasat

./: README.md  key
build-groundstation-Desktop-Debug/: Makefile  groundstation  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
build-groundstation-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-groundstation-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractAxis.6885C3D8C1947E0C.idx  QAbstractBarSeries.098EC44A96F87C69.idx  QAbstractSeries.0656C3F83B11C162.idx  QAreaSeries.7FE0256AFA68FE4D.idx  QBarModelMapper.59ED6ADD0EE52523.idx  QBarSet.70716B520DB5982B.idx  QBoxPlotModelMapper.5ED756FC428DD1B2.idx  QBoxPlotSeries.C17DCFC95352787A.idx  QBoxSet.2824B39FFFA3F3FC.idx  QBrush.41A909842CD4FFA8.idx  QCandlestickModelMapper.6861ABD93352420B.idx  QCandlestickSeries.93275064B8E5327A.idx  QChart.1277F63572632586.idx  QChartGlobal.BC03AD2A6ED937DF.idx  QFont.EB0C78B2642A5794.idx  QGraphicsView.E766032BA9870BCF.idx  QGraphicsWidget.691A8FF40F6E89C3.idx  QLCDNumber.E99571F60D8B02B5.idx  QLegend.C2E50629C5211028.idx  (+380 more)
build-groundstation-Desktop-Debug2/.qtc_clangd/: compile_commands.json
groundst/: CMakeLists.txt  compile
groundst/groundstation/: groundstation.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
groundst/receiver/: receiver.ino
groundst/src/: main.cpp
groundstation/: groundstation.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
hardware/cansat/: cansat.kicad_prl  cansat.kicad_pro  cansat.kicad_sch  sym-lib-table
sat/camera/: camera.ino
sat/cansat/: cansat.ino
sat/cansat.esp32/: cansat.esp32.ino
(+260 files in other folders)
